tests/rosetta/out/Java/associative-array-merging.error
javac error: exit status 1
/tmp/TestMochiToJavaassociative-array-merging1203175828/001/AssociativeArrayMerging.java:6: error: cannot find symbol
    static Map<String,any> merge(Map<String,any> base, Map<String,any> update) {
                                            ^
  symbol:   class any
  location: class AssociativeArrayMerging
/tmp/TestMochiToJavaassociative-array-merging1203175828/001/AssociativeArrayMerging.java:6: error: cannot find symbol
    static Map<String,any> merge(Map<String,any> base, Map<String,any> update) {
                                                                  ^
  symbol:   class any
  location: class AssociativeArrayMerging
/tmp/TestMochiToJavaassociative-array-merging1203175828/001/AssociativeArrayMerging.java:6: error: cannot find symbol
    static Map<String,any> merge(Map<String,any> base, Map<String,any> update) {
                      ^
  symbol:   class any
  location: class AssociativeArrayMerging
/tmp/TestMochiToJavaassociative-array-merging1203175828/001/AssociativeArrayMerging.java:7: error: cannot find symbol
        Map<String,any> result = new LinkedHashMap<String,any>();
                   ^
  symbol:   class any
  location: class AssociativeArrayMerging
/tmp/TestMochiToJavaassociative-array-merging1203175828/001/AssociativeArrayMerging.java:7: error: cannot find symbol
        Map<String,any> result = new LinkedHashMap<String,any>();
                                                          ^
  symbol:   class any
  location: class AssociativeArrayMerging
/tmp/TestMochiToJavaassociative-array-merging1203175828/001/AssociativeArrayMerging.java:17: error: cannot find symbol
        Map<String,any> base = new NamePriceColor("Rocket Skates", 12.750000, "yellow");
                   ^
  symbol:   class any
  location: class AssociativeArrayMerging
/tmp/TestMochiToJavaassociative-array-merging1203175828/001/AssociativeArrayMerging.java:17: error: cannot find symbol
        Map<String,any> base = new NamePriceColor("Rocket Skates", 12.750000, "yellow");
                                   ^
  symbol:   class NamePriceColor
  location: class AssociativeArrayMerging
/tmp/TestMochiToJavaassociative-array-merging1203175828/001/AssociativeArrayMerging.java:18: error: cannot find symbol
        Map<String,any> update = new PriceColorYear(15.250000, "red", 1974);
                   ^
  symbol:   class any
  location: class AssociativeArrayMerging
/tmp/TestMochiToJavaassociative-array-merging1203175828/001/AssociativeArrayMerging.java:18: error: cannot find symbol
        Map<String,any> update = new PriceColorYear(15.250000, "red", 1974);
                                     ^
  symbol:   class PriceColorYear
  location: class AssociativeArrayMerging
/tmp/TestMochiToJavaassociative-array-merging1203175828/001/AssociativeArrayMerging.java:19: error: cannot find symbol
        Map<String,any> result = merge(base, update);
                   ^
  symbol:   class any
  location: class AssociativeArrayMerging
Note: /tmp/TestMochiToJavaassociative-array-merging1203175828/001/AssociativeArrayMerging.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors
